# agent-isle

./: .gitignore  AGENT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  example-config.yml  flake.nix
githooks/: pre-commit  pre-push
pandoc/scripts/: check-rules.lua  filter-audience.lua  fix-callouts.lua  include.lua  promote-headings.lua  remove-hard-breaks.lua
pandoc/sources/: agent.mkd  contributing.mkd  readme.mkd
pandoc/sources/themes/: architecture.mkd  configuration.mkd  conventions.mkd  development.mkd  installation.mkd  scope.mkd  usage.mkd
scripts/: .gitignore  build-docs.sh  setup-githooks.sh
src/: lib.rs  main.rs
src/config/: mod.rs
src/platform/: mod.rs
src/sandbox/: mod.rs
src/secrets/: mod.rs
src/tools/: mod.rs
src/util/: mod.rs
tests/: binary_validation.rs  cli_integration.rs  config_integration.rs  sandbox_isolation.rs
