[package]
name = "agent-isle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-isle"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
regex = "1"
scopeguard = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
httparse = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]
assert_cmd = "2"
indoc = "2"
predicates = "3"
rstest = "0.23"
tempfile = "3"
